<resources>
    <string name="app_name">On Go</string>
    <string name="options">Meaning</string>
    <string name="buy_me_a_beer">Buy me a beer</string>
    <string name="not_found">Not found</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="rate">Rate</string>
    <string name="error">Error</string>
    <string name="close">close</string>
    <string name="pronounce">pronounce</string>
    <string name="expand">expand</string>
    <string name="name">Name</string>
    <string name="feedback_issue">Feedback/Issue*</string>
    <string name="separator">..</string>
</resources>
